<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFamilyMart">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/header_name"
            android:textColor="@color/colorBule" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/iconfamilymart" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:layout_alignParentStart="true"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="76dp">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:minHeight="500dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:text="@string/titleFistLogin"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/titleInfoLogin" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/titleFistLogin"
                android:autofillHints="@string/titleFistLogin"
                android:gravity="center"
                android:ems="10"
                android:inputType="number" />
            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="0dp"
                android:text="@string/titlePassword"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/titlePassword"
                android:autofillHints="@string/titlePassword"
                android:gravity="center"
                android:ems="10"
                android:inputType="numberPassword" />

            <android.support.v7.widget.CardView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="21dp"
                app:cardBackgroundColor="@color/colorBule"
                app:cardCornerRadius="25dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titleButtonName"
                        android:textColor="@color/colorWhite"
                        android:layout_centerInParent="true"
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgetPassword"
                android:gravity="center"
                android:textSize="18dp"
                android:textStyle="bold|italic"
                android:linksClickable="true"
                android:layout_marginTop="21dp"
                android:textColor="@color/colorGreen"
                />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:layout_marginTop="21dp"
                android:gravity="center"
                android:text="@string/infoMsg" />

            <android.support.v7.widget.CardView
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="21dp"
                app:cardBackgroundColor="@color/colorGreen"
                app:cardCornerRadius="25dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titleButtonName"
                        android:textColor="@color/colorWhite"
                        android:layout_centerInParent="true"
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>